force-app/main/default/objects/Record_Tracking__c/Record_Tracking__c.object-meta.xml
<CustomObject>
    <label>Record Tracking</label>
    <nameField>
        <label>Record Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Records Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>