force-app/main/default/objects/Record_Tracking__c/fields/Book_Number__c.field-meta.xml
<CustomField>
    <fullName>Book_Number__c</fullName>
    <label>Book Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>