force-app/main/default/objects/Record_Tracking__c/fields/Mortgagee__c.field-meta.xml
<CustomField>
    <fullName>Mortgagee__c</fullName>
    <label>Mortgagee</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>