force-app/main/default/objects/Record_Tracking__c/fields/Mortgagor__c.field-meta.xml
<CustomField>
    <fullName>Mortgagor__c</fullName>
    <label>Mortgagor</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>