force-app/main/default/objects/Record_Tracking__c/fields/Page_Number__c.field-meta.xml
<CustomField>
    <fullName>Page_Number__c</fullName>
    <label>Page Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>