force-app/main/default/objects/Record_Tracking__c/fields/RecId__c.field-meta.xml
<CustomField>
    <fullName>RecId__c</fullName>
    <externalId>true</externalId>
    <label>RecId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>