force-app/main/default/objects/Record_Tracking__c/fields/Recording_County__c.field-meta.xml
<CustomField>
    <fullName>Recording_County__c</fullName>
    <label>Recording County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>