force-app/main/default/objects/Record_Tracking__c/fields/Recording_Date__c.field-meta.xml
<CustomField>
    <fullName>Recording_Date__c</fullName>
    <label>Recording Date</label>
    <type>Date</type>
</CustomField>