force-app/main/default/objects/Record_Tracking__c/fields/Recording_Desc__c.field-meta.xml
<CustomField>
    <fullName>Recording_Desc__c</fullName>
    <label>Recording Desc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>