force-app/main/default/objects/Record_Tracking__c/fields/Recording_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Recording_Order_Number__c</fullName>
    <label>Recording Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>