force-app/main/default/objects/Record_Tracking__c/fields/Recording_State__c.field-meta.xml
<CustomField>
    <fullName>Recording_State__c</fullName>
    <label>Recording State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>