force-app/main/default/objects/Record_Tracking__c/fields/Recording_Type__c.field-meta.xml
<CustomField>
    <fullName>Recording_Type__c</fullName>
    <label>Recording Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>