force-app/main/default/objects/Record_Tracking__c/fields/Title_Order__c.field-meta.xml
<CustomField>
    <fullName>Title_Order__c</fullName>
    <label>Title Order</label>
    <referenceTo>Title_Order__c</referenceTo>
    <relationshipLabel>Records Tracking</relationshipLabel>
    <relationshipName>Records_Tracking</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>